# python-project-52

./: Makefile  README.md  pyproject.toml
.github/workflows/: django.yml
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixin.py  settings.py  urls.py  views.py
task_manager/fixtures/: statuses.json  tasks.json  users.json
task_manager/labels/: admin.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/templates/: form_status.html
task_manager/tasks/: filters.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/tasks/templates/: filter_form.html  form_task.html  tasks.html
task_manager/templates/: base.html  footer.html  form.html  header.html  index.html  labels.html  tasks.html  users.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  filter_form.html  index.html  task.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html  users.html
task_manager/users/: admin.py  forms.py  mixin.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/templates/: form.html  registration.html  update.html
