[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager - web service allows to define a tasks"
authors = ["prStudentka <bk_nvk@mail.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Django",
]
repository = "https://github.com/prStudentka/python-project-52"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.3"
django-bootstrap5 = "^23.3"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
django-filter = "^23.5"
rollbar = "0.16.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
coverage = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
